objects/FieldServiceActivityProduct__c.object
<CustomObject>
    <description>SFDC1-166.
Tracks products behind the Field Service Activities.</description>
    <fields>
        <fullName>FieldServiceActivity__c</fullName>
        <description>SFDC1-166.
Reference to the field service activity.</description>
        <label>Field Service Activity</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Field Service Activity Products</relationshipLabel>
        <relationshipName>FieldServiceActivityProducts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-8596:Add Legacy Fields to the Fields Service Activity Product</description>
        <externalId>true</externalId>
        <inlineHelpText>This field stores the concatenation of the source system name and a source system record id to ensure the record is uniquely identified.</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-8596:Add Legacy Fields to the Fields Service Activity Product</description>
        <externalId>true</externalId>
        <inlineHelpText>Populates from the legacy system</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-8596:Add Legacy Fields to the Fields Service Activity Product</description>
        <inlineHelpText>Name of the CRM system the source record came from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PKIDFSAP__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>FSP{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID FSAP</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-6381: Changing the lookup from Product to Product group</description>
        <label>Product Group</label>
        <referenceTo>ProductGroup__c</referenceTo>
        <relationshipLabel>Field Service Activity Products</relationshipLabel>
        <relationshipName>FieldServiceActivityProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Field Service Activity Product</label>
    <nameField>
        <displayFormat>FSAPRD-{00000}</displayFormat>
        <label>Field Service Activity Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Service Activity Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>